--- a/locales/en_US.json
+++ b/locales/en_US.json
@@ -24,15 +24,15 @@
   },
   "curation": {
     "prompt": "Here are our on-going programs! Please select the following based on your choices.",
-    "occasion": "Great! Let's get started. First, is there an occasion in mind?",
+    "occasion": "Lab 32 is a four-month long program for early- and mid-stage tech startups. It offers structured, meaningful, outcome-driven guidance on business goals set by startups themselves, in an intensive setting. Lab32 aims to help startups push their limits, achieve their goals faster and come out of the current situation better prepared for success. Lab32 is an established and highly coveted program by startups. The upcoming batch is the fourth batch of Lab32.",
     "price": "How much are you looking to spend?",
     "me": "Lab32",
     "someone": "Community Program",
     "program3":"T-Tribe",
-    "work": "Work",
-    "dinner": "Dinner",
-    "party": "Party",
-    "sales": "Talk to sales",
+    "work": "Know more about Lab32...",
+    "dinner": "Community Program",
+    "party": "T-Tribe",
+    "sales": "Explore other programs at T-Hub",
     "shop": "Shop this look",
     "title": "Summer collection 2019",
     "subtitle": "Featured outfit",
