--- a/locales/en_US.json
+++ b/locales/en_US.json
@@ -25,7 +25,7 @@
   "curation": {
     "prompt": "Here are our on-going programs! Please select the following based on your choices.",
     "occasion": "Lab 32 is a four-month long program for early- and mid-stage tech startups. It offers structured, meaningful, outcome-driven guidance on business goals set by startups themselves, in an intensive setting. Lab32 aims to help startups push their limits, achieve their goals faster and come out of the current situation better prepared for success. Lab32 is an established and highly coveted program by startups. The upcoming batch is the fourth batch of Lab32.",
-    "price": "How much are you looking to spend?",
+    "price": "know more",
     "me": "Lab32",
     "someone": "Community Program",
     "program3":"T-Tribe",
